# bitcoin-explorer

./: README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx
