[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql = "20.0.0"
funty = { version = "3.0.0-rc2" }
warp = "0.3"
anyhow = "1.0"  # 添加 anyhow 依赖
futures-util = "0.3"